--- a/style.css
+++ b/style.css
@@ -64,3 +64,6 @@ footer {
   background: #333;
   color: white;
 }
+CSS dile 
+There was an error committing your changes: A file with the same name already exists. Please choose a different name and try again.
+Etabole
